# Aeds1---CCF211

./: README.md
TP1-CCF211/_AEDS1-main/: README.md
TP1-CCF211/_AEDS1-main/AEDS_TRABALHOP1/: Arquivo_Teste1.txt  Arquivo_teste3.txt  CMakeLists.txt  Endereco.c  Endereco.h  LAgenda.c  LAgenda.h  LCompromisso.c  LCompromisso.h  LeituraArquivo.c  LeituraArquivo.h  Professor.c  Professor.h  agenda.c  agenda.h  compromisso.c  compromisso.h  data.c  data.h  hora.c  hora.h  main.c
TP2-CCF211/GabrielMiranda - 3857, MarianaSouza - 3898, FelipeDias - 3888/TrabalhoPrático2/: main.c  sat.c  sat.h  tupla.c  tupla.h
TP3-CCF211/Trabalho3deaeds/: Arraysort.c  Arraysort.h  Recordsort.c  Recordsort.h  TesteRapido_Array.txt  TesteRapido_Registro.txt  main.c
